Carousel arrows z-index issue is resolved.

--- a/src/less/kitgeo.less
+++ b/src/less/kitgeo.less
@@ -192,10 +192,14 @@ body {
         visibility: hidden;
     }
 
+    .carousel-control {
+        z-index: 20;
+    }
+
     .carousel-caption-global {
         visibility: hidden;
         position: absolute;
-        z-index: 15;
+        z-index: 14;
         top: 30px;
         left: 0;
         right: 0;
